--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 
     implementation 'io.paperdb:paperdb:2.6'
 
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
