--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,25 +6,32 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_food_label"
+        android:icon="@drawable/logoq"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_food_label"
+        android:roundIcon="@drawable/logoq"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MPTFood">
+        android:theme="@style/Theme.MPTFoodLight"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:screenOrientation="portrait"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".DetailActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.MPTFood"/>
+            android:theme="@style/Theme.MPTFoodLight"/>
+        <activity
+            android:exported="true"
+            android:name=".SplashScreenActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Splash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
     </application>
 
 </manifest>
